js/src/tests/test262/built-ins/Error/prototype/stack/getter-this-not-object.js















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

assert.sameValue(typeof get, 'function');

var badReceivers = [
  ['undefined', undefined],
  ['null', null],
  ['true', true],
  ['false', false],
  ['number', 1],
  ['string', ''],
  typeof Symbol === 'undefined' ? null : ['symbol', Symbol('s')],
  typeof BigInt === 'undefined' ? null : ['bigint', BigInt(0)]
];

for (var i = 0; i < badReceivers.length; ++i) {
  if (!badReceivers[i]) continue;
  var label = badReceivers[i][0];
  var value = badReceivers[i][1];
  assert.throws(TypeError, function () {
    get.call(value);
  }, label);
}

reportCompare(0, 0);
